[workspace]
members = [
  "crates/hash-core",
  "crates/rust-wasm-kernel"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
hex = "0.4"
scrypt = { version = "0.11", default-features = false }
subtle = "2.6"
unicode-normalization = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
